--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "author": "Nicolas Escalante <nlante@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "tap": "^14.11.0"
+    "tap": "^16.3.4"
+  },
+  "engines": {
+    "node": "^16.13.2",
+    "npm": "^8.1.2"
   },
   "directories": {
     "test": "test"
