--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "tap": "^16.3.4"
   },
   "engines": {
-    "node": "^16.13.2",
-    "npm": "^8.1.2"
+    "node": ">=12, <=20"
   },
   "directories": {
     "test": "test"
@@ -34,6 +33,6 @@
   },
   "homepage": "https://github.com/nescalante/urlregex#readme",
   "dependencies": {
-    "re2": "^1.17.4"
+    "re2": "^1.18.0"
   }
 }
