--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "urlregex",
-  "version": "0.6.7",
+  "version": "1.0.0",
   "description": "URL validation for Node and the browser",
   "main": "server.js",
   "browser": "browser.js",
@@ -19,8 +19,8 @@
     "tap": "^16.3.4"
   },
   "engines": {
-    "node": "^16.13.2",
-    "npm": "^8.1.2"
+    "node": ">=16.13.2",
+    "npm": ">=8.1.2"
   },
   "directories": {
     "test": "test"
@@ -34,6 +34,6 @@
   },
   "homepage": "https://github.com/nescalante/urlregex#readme",
   "dependencies": {
-    "re2": "^1.17.4"
+    "re2": "^1.20.1"
   }
 }
